tests/functional/lang/eval-fail-using-set-as-attr-name.err.exp
error:
       … while evaluating an attribute name
         at /pwd/lang/eval-fail-using-set-as-attr-name.nix:5:10:
            4| in
            5|   attr.${key}
             |          ^
            6|

       error: expected a string but found a set: { }
       at /pwd/lang/eval-fail-using-set-as-attr-name.nix:5:10:
            4| in
            5|   attr.${key}
             |          ^
            6|
